# robot_software_architect_POC

./: .gitignore  README.md
Docs/: custom.c
Docs/Education/: readme
control/: CMakeLists.txt  SharedMemory.h  SharedObject.h  actuatorControlSharedMemory.h  actuator_control.cpp  actuator_control.h  control.cpp  control.h  manipulator_control.cpp  manipulator_control.h  robot_state.h
ethercat-code/: CMakeLists.txt  README.md  SharedMemory.h  SharedObject.h  cyclicTask.h  fieldbusSharedMemory.h  master.cpp  master.h  transistionState.h
global/: SharedObject.h
logic/: CMakeLists.txt  driveLogicSharedMemory.h  drive_logic.cpp  drive_logic.h  logic.cpp  logic.h  logicSharedMemory.h
userInput/: userInput.cpp  userInput.h  userInputSharedMemory.h
